1413
Slightly different error for f(x) in 2.9.0.r24145-b20110130020134
```scala
scala> f(x)
<console>:9: error: type mismatch;
 found   : Test[Nothing]
 required: Test[A]
Note: Nothing <: A, but trait Test is invariant in type A.
You may wish to define A as +A instead. (SLS 4.5)
       f(x)
         ^
```
